overflow bug resolved

--- a/gharpayy.com/css/style.css
+++ b/gharpayy.com/css/style.css
@@ -77,7 +77,7 @@ h6,
 
 .photo-track {
 	display: flex;
-	overflow-x: scroll;
+	overflow-x: scroll !important;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 	scroll-behavior: smooth;
@@ -363,7 +363,7 @@ h6,
 
 .listing-images {
 	display: flex;
-	overflow-x: scroll;
+	overflow-x: scroll !important;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 	scroll-behavior: smooth;
@@ -437,7 +437,7 @@ h6,
 
 .listing {
 	display: flex;
-	overflow-x: scroll;
+	overflow-x: scroll !important;
 	scrollbar-width: none;
 	-ms-overflow-style: none;
 	scroll-behavior: smooth;
@@ -1296,7 +1296,7 @@ footer .social-media li:hover a,
 	padding-left: 15px;
 	padding-right: 15px;
 	background-color: #fff;
-	/* overflow-x: hidden; */
+	overflow-x: hidden;
 	position: relative
 }
 
